--- a/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
+++ b/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
@@ -1,9 +1,12 @@
 ﻿@model List<ProjetoPortifolio.Models.ButtonSite>
 
 @{
-    
-    @using SmartBreadcrumbs;
+
+    var viewDataContent = ViewData["ViewDataContent"].ToString();
 }
+
+
+
 
 <nav class="navbar navbar-expand-lg nav" id="menu_principal" style="background-color:black; display:flex;  justify-content: space-around;">
 
@@ -44,5 +47,9 @@
     }
 </nav>
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    @Html.Raw(viewDataContent.Trim())
+  </ol>
+</nav>
 
-<breadcrumb id="bread"></breadcrumb>
