--- a/Projeto_portifolio/Views/Portifolio/LayoutGeral.cshtml
+++ b/Projeto_portifolio/Views/Portifolio/LayoutGeral.cshtml
@@ -2,82 +2,18 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    @using X.PagedList.Mvc.Core;
 }
 
-<style>
-    .imagens-portifolio {
-        display: -webkit-flex; /* Safari */
-        -webkit-flex-wrap: wrap; /* Safari 6.1+ */
-        display: inline-flex;
-        flex-wrap: wrap;
-    }
-
-    .imagens-portifolio-item {
-        display: -webkit-flex; /* Safari */
-        -webkit-flex-wrap: wrap; /* Safari 6.1+ */
-        display: inline-flex;
-        flex-wrap: wrap;
-        border: none;
-    }
-
-       
-    .numberCircle {
-
-        width: 250px;
-        height: 250px;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 21.6px;
-        border: 2px solid #3498db;
-        color:white;
-        background:#3498db;
-        position: absolute;
-        top: -132px;
-        left: 50%;
-        transform: translateX(-50%)
-    }
-
-</style>
 
 
+<partial name="~/Views/Components/MensagemAlerta.cshtml"/>
 
-
-<div class="alert alert-warning alert-dismissible fade show" id="msg-alerta" role="alert" style="display:none;">
-    <div id="titulo_alerta"></div> <br /> <br />
-    <div id="texto-alerta"> </div>
-    <button type="button" id="close-alert" class="close" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-
-
-<div hidden="hidden" style="align-content:center;" class="spinner-grow text-dark"></div>
+<div hidden="hidden" style="align-content:center;" id="spinnerLoading" class="spinner-grow text-dark"></div>
 
 
 @if (Model.dadosPagina.nome_pagina == "_main")
 {
-    <div id="item-principal" class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-11">
-            <div class="content col-sm-10 col-lg-40 col-md-20">
-                @if (Model.mainFoto != "")
-                {
-                    <img  class="numberCircle" src="@Model.mainFoto" />
-                }
-                else
-                {
-                    <div class="numberCircle"> Nenhuma Imagem  </div>
-                }
-
-                <div style="display:none;" id="desc-principal" class="description-main">
-                    @Html.Raw(Model.dadosPagina.conteudo_pagina.ToString());
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-
+    <partial name="~/Views/Components/ApresentacaoLayout.cshtml"/>
 }
 
 
@@ -90,77 +26,25 @@
 
 @if (Model.dadosPagina.hasForm == true)
 {
-    @if (Model.dadosPagina.nome_pagina == "_login" && User.Identity.IsAuthenticated == true)
-    {
-        <h3><b> <i style="color:red;">Atenção</i> <br /><br /> Você já esta logado com o usuário  <i style="color:red;">@User.Identity.Name </i> caso queira acessar o login , favor deslogar e entrar com o usuario e senha novamente !</b> </h3>
-    }
-    else
-    {
-        int contador = 1;
-        string IdFormulario = "formularioSubmit" + contador.ToString();
-
-        <form id="@IdFormulario" action="">
-
-            @foreach (string forms in Model.formularios)
-            {
-                @Html.Raw(forms);
-            }
-
-        </form>
-    }
+    <partial name="~/Views/Components/FormulariosGeral.cshtml"/>
 }
 
 @if (Model.dadosPagina.nome_pagina != "_main")
 {
     @if (Model.dadosPagina.hasFoto == true)
     {
-        @foreach (ImagensPortifolio foto in Model.imagens)
-        {
-            <div class="imagens-portifolio-item  view overlay zoom">
-                <div style="border:inset; width:253px; height:253px;  margin-left:20px; margin-top:20px;">
-                    <a class="example-image-link" href="@foto.urlFoto" data-lightbox="example-1" data-title="@foto.descricao_foto"><img style="width:253px; height:253px;" class="example-image img-thumbnail" src="@foto.urlFoto" alt="image-1" /></a>
-                </div>               
-            </div>
-        }
-
+        <partial name="~/Views/Components/DetalhamentoFotosCadastradas.cshtml"/>
     }
 
     @if (Model.dadosPagina.isMainPhoto == true)
     {
-        @foreach (ImagensPortifolio foto in Model.imagens)
-        {
-            <div style="border:inset; width:253px; height:253px; border-color:black; margin-left:20px; margin-top:20px;" class="imagens-portifolio">
-                <div class="hovereffect">
-                    <img class="img-project" src="@foto.urlFoto" alt="">
-                    <div class="title" style="margin-top:100px;">
-                        <h2>@foto.id_tela.Replace("_", " ")</h2>
-                    </div>
-                    <img />
-                    <div class="overlay" style="width:400px;">
-                        <div style="width:300px; margin:2px; margin-left:-44px;">
-                            <a id="btn_visit" data-placement="top" data-toggle="tooltip" title="Abrir Galeria de Fotos" class="tip-top btn btn-primary" href="@("/Portifolio/"+foto.id_tela)">Galeria</a>
-                            <button type="button" data-placement="top" data-toggle="tooltip" title="Ver História do projeto" id="btn_desc" class="tip-top btn btn-success"> Descrição  Projeto</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        }
+        <partial name="~/Views/Components/ExibicaoFotosPrincipais.cshtml"/>
     }
 
     <br />
     <br />
     <br />
-
-    @if (Model.imagens != null)
-    {
-        @Html.PagedListPager(Model.imagens, pagina => Url.Action("ChamaViewDinamica", new { Model.dadosPagina.nome_pagina, pagina }),
-           new X.PagedList.Mvc.Common.PagedListRenderOptionsBase
-           {
-               LiElementClasses = new string[] { "page-item" },
-               PageClasses = new string[] { "page-link" }
-           });
-    }
-
+    
+    <partial name="~/Views/Components/PaginationImages.cshtml" model="new ProjetoPortifolio.ViewModel.ParametrosPaginacaoViewModel(){ imagens = Model.imagens , dadosPagina = Model.dadosPagina }"/>
 
 }
