--- a/Projeto_portifolio/Views/Shared/_Layout.cshtml
+++ b/Projeto_portifolio/Views/Shared/_Layout.cshtml
@@ -31,36 +31,22 @@
         <br />
 
         @RenderBody()
-
+        <a id="gototop" href="#">ir para o topo</a>
         <hr />
         <footer>
-            <p id="footer-content" style="margin-left:35%;">Pedro Vinicius Rodrigues Furlan  &copy; -  @DateTime.Now.Year  </p>
+            <p id="footer-content">&copy; COPYRIGHT @DateTime.Now.Year  -  Pedro Vinicius Rodrigues Furlan - TODOS OS DIREITOS RESERVADOS    </p>
         </footer>
     </div>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-        </script>
-    </environment>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/js/PortifolioScript.js" asp-append-version="true"></script>
     <script src="~/dist/js/lightbox.js" asp-append-version="true"></script>
 
 
 
+
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
