--- a/Projeto_portifolio/Views/Components/PaginationImages.cshtml
+++ b/Projeto_portifolio/Views/Components/PaginationImages.cshtml
@@ -1,6 +1,4 @@
-﻿@using X.PagedList;
-
-@model ProjetoPortifolio.ViewModel.ParametrosPaginacaoViewModel
+﻿@model ProjetoPortifolio.ViewModel.ParametrosPaginacaoViewModel
 
 @{
     Layout = null;
@@ -14,5 +12,6 @@
     {
         LiElementClasses = new string[] { "page-item" },
         PageClasses = new string[] { "page-link" }
+        
     });
 }
