--- a/Projeto_portifolio/Views/Shared/_Layout.cshtml
+++ b/Projeto_portifolio/Views/Shared/_Layout.cshtml
@@ -34,7 +34,11 @@
         <a id="gototop" href="#">ir para o topo</a>
         <hr />
         <footer>
-            <p id="footer-content">&copy; COPYRIGHT @DateTime.Now.Year  -  Pedro Vinicius Rodrigues Furlan - TODOS OS DIREITOS RESERVADOS    </p>
+            <div class="row">
+                <div class="col col-md-21"></div>
+                <p id="footer-content">&copy; COPYRIGHT @DateTime.Now.Year  -  Pedro Vinicius Rodrigues Furlan - TODOS OS DIREITOS RESERVADOS    </p> 
+                <div class="col col-md-21"></div>
+            </div>
         </footer>
     </div>
 
