--- a/Projeto_portifolio/Views/Components/ApresentacaoLayout.cshtml
+++ b/Projeto_portifolio/Views/Components/ApresentacaoLayout.cshtml
@@ -141,7 +141,7 @@
                 borderWidth: 0,
                 dataLabels: {
                     enabled: true,
-                    format: '{point.y:.1f}%'
+                    format: '{point.x:.1f}%'
                 }
             }
         },
@@ -153,18 +153,18 @@
 
         series: [
             {
-                name: "Browsers",
+                name: "Categorias",
                 colorByPoint: true,
                 data: [
                     {
-                        name: "Chrome",
+                        name: "Front End",
                         y: 62.74,
-                        drilldown: "Chrome"
+                        drilldown: "Front"
                     },
                     {
-                        name: "Firefox",
+                        name: "Back End",
                         y: 10.57,
-                        drilldown: "Firefox"
+                        drilldown: "back"
                     }
                    
                 ]
@@ -173,101 +173,46 @@
         drilldown: {
             series: [
                 {
-                    name: "Chrome",
-                    id: "Chrome",
+                    name: "Front",
+                    id: "Front",
                     data: [
                         [
-                            "v65.0",
+                            "Html",
                             0.1
                         ],
                         [
-                            "v64.0",
+                            "CSS",
                             1.3
                         ],
                         [
-                            "v63.0",
+                            "Java Script",
                             53.02
                         ],
                         [
-                            "v62.0",
+                            "Bootstrap",
                             1.4
-                        ],
-                        [
-                            "v61.0",
-                            0.88
-                        ],
-                        [
-                            "v60.0",
-                            0.56
-                        ],
-                        [
-                            "v59.0",
-                            0.45
-                        ],
-                        [
-                            "v58.0",
-                            0.49
-                        ],
-                        [
-                            "v57.0",
-                            0.32
-                        ],
-                        [
-                            "v56.0",
-                            0.29
-                        ],
-                        [
-                            "v55.0",
-                            0.79
-                        ],
-                        [
-                            "v54.0",
-                            0.18
-                        ],
-                        [
-                            "v51.0",
-                            0.13
-                        ],
-                        [
-                            "v49.0",
-                            2.16
-                        ],
-                        [
-                            "v48.0",
-                            0.13
-                        ],
-                        [
-                            "v47.0",
-                            0.11
-                        ],
-                        [
-                            "v43.0",
-                            0.17
-                        ],
-                        [
-                            "v29.0",
-                            0.26
                         ]
+                      
                     ]
                 },
                 {
-                    name: "Firefox",
-                    id: "Firefox",
+                    name: "back",
+                    id: "back",
                     data: [
                         [
-                            "v58.0",
+                            "C#",
                             1.02
                         ],
                         [
-                            "v57.0",
+                            "PHP",
                             7.36
                         ],
                         [
-                            "v56.0",
+                            "Entity Framework",
                             0.35
                         ],
                         [
-                            "v55.0",
+                            "",
                             0.11
                         ],
                         [
