--- a/Projeto_portifolio/Views/Sections/Scripts.cshtml
+++ b/Projeto_portifolio/Views/Sections/Scripts.cshtml
@@ -7,3 +7,6 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="~/js/PortifolioScript.js" asp-append-version="true"></script>
 <script src="~/dist/js/lightbox.js" asp-append-version="true"></script>
+<script src="~/js/addons/datatables.min.js"></script>
+
+
