--- a/Projeto_portifolio/Views/Sections/Scripts.cshtml
+++ b/Projeto_portifolio/Views/Sections/Scripts.cshtml
@@ -3,10 +3,12 @@
 }
 
 
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="~/js/PortifolioScript.js" asp-append-version="true"></script>
-<script src="~/dist/js/lightbox.js" asp-append-version="true"></script>
-<script src="~/js/addons/datatables.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    @*<script src="~/js/PortifolioScript.js" asp-append-version="true"></script>*@
+    <script src="~/dist/js/lightbox.js" asp-append-version="true"></script>
+    <script src="~/js/addons/datatables.min.js"></script>
+
+
 
 
