--- a/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
@@ -139,7 +139,7 @@
                         {
                             <a href="" data-placement="top" style="margin:20px;" class="tip-top" data-toggle="tooltip" title="Incluir Formulário" shref=""><img width="30" height="30" src="~/icons/form_icon.png" /></a>
                         }
-                        <button type="button" style="width:110px;" onclick="location.href='DadosTelaDinamicoManager?tagPagina=@dadosPagina.nome_pagina'" class="tip-top btn btn-info" data-placement="top" data-toggle="tooltip" title="Alterar dados da tela"><span class="fas fa-pen"></span> &nbsp; Alterar </button>
+                        <button type="button" style="width:110px;" onclick="location.href='/Portifolio/ConfiguracaoPagina/@dadosPagina.nome_pagina'" class="tip-top btn btn-info" data-placement="top" data-toggle="tooltip" title="Alterar dados da tela"><span class="fas fa-pen"></span> &nbsp; Alterar </button>
 
                     </div>
                 </td>
