--- a/Projeto_portifolio/Views/Shared/Manager/Pagina_alteracao.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Pagina_alteracao.cshtml
@@ -39,7 +39,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "getDadosTela",
+                url: "@Url.Action("getDadosTela","Portifolio")",
                 data: {
                     idTela: "@idPagina"
                 },
