--- a/Projeto_portifolio/Views/Shared/_Layout.cshtml
+++ b/Projeto_portifolio/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
 
 <body>
     <partial name="PartialViewMenu" model="Model.botoes" />
-
     <br />
     <br />
     <div id="conteudoSite" class="container body-content">
@@ -35,9 +34,8 @@
     </div>
 
     <partial name="~/Views/Sections/Scripts.cshtml" />
-    @*@RenderSection("~/Views/Sections/Scripts.cshtml")*@
 
-
+    <partial name="~/Views/Shared/PortifolioScript.cshtml"/>
 </body>
 
 </html>
