Alterações no menu principal manager layout [

--- a/Projeto_portifolio/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml
@@ -30,7 +30,10 @@
             "paging": true, // false to disable pagination (or any other option)
              "pagingType": "full_numbers"
           });
-          $('.dataTables_length').addClass('bs-select');
+        $('.dataTables_length').addClass('bs-select');
+
+
+        $("#conteudoSite").css({ "width": "2165px" });
 
 
     });
