--- a/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
@@ -21,17 +21,12 @@
     #preview_fotos {
         margin-left: 21px;
     }
-
 </style>
 
-<hr style="height:2px; border:thin; color:#000; background-color:#000; margin-top: 0px; margin-bottom: 0px;" />
-<br/>
-
-<h1><span class="fa fa-pen-alt"></span> Modificação de Titulo Geral </h1>
-
-<partial name="~/Views/Components/MensagemAlerta.cshtml">
-
+@*<hr style="height:2px; border:thin; color:#000; background-color:#000; margin-top: 0px; margin-bottom: 0px;" />*@
 <br />
+
+
 
 
 <div class="modal fade" id="modalDinamico" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -64,93 +59,140 @@
     </div>
 </div>
 
+<partial name="~/Views/Components/MensagemAlerta.cshtml">
 
-@{
-    int contador = 1;
-    string IdFormulario = "formularioSubmit" + @contador.ToString();
-    <fieldset class="col-md-auto">
-        <form class="form-inline" id="@IdFormulario" action="">
-            @foreach (string forms in Model.formularios)
-            {
-                @Html.Raw(forms + "&nbsp&nbsp&nbsp");
-            }
-        </form>
+    <div class="box-itens" style="width:1282px;">
+        <div class="accordion" id="accordionExample">
+            <!-- area titulo geral -->
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                        <span class="fa fa-pen-alt"></span> Modificação de Titulo Geral
+                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#tabTituloGeral"></a>
+                    </h2>
+                </div>
+                <div id="tabTituloGeral" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <fieldset id="area_Titulo_geral">
+                            @{
+                                int contador = 1;
+                                string IdFormulario = "formularioSubmit" + @contador.ToString();
 
-    </fieldset>
-}
+                                <form class="form-inline" id="@IdFormulario" action="">
+                                    @foreach (string forms in Model.formularios)
+                                    {
+                                        @Html.Raw(forms + "&nbsp&nbsp&nbsp");
+                                    }
+                                </form>
 
-<br /><br />
+                            }
+                       </fieldset>
+                    </div>
+                </div>
+            </div>
+            <!-- area titulo geral -->
 
-<hr style="height:2px; border:thin; color:#000; background-color:#000; margin-top: 0px; margin-bottom: 0px;" />
+            <!-- area Paginas Cadastradas -->
+            <div class="card">
+                <div class="card-header" id="headingTwo">
+                    <h2 class="mb-0">
+                        <span class="fa fa-book"></span> Paginas Cadastradas
+                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#tabPaginasCadastradas"></a>
+                    </h2>
+                </div>
+                <div id="tabPaginasCadastradas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
 
-<br />
+                        <button style="margin-left:920px; margin-top:-10px; width: 200px;" type="button" onclick="location.href='DadosTelaDinamicoManager'" class="btn btn-outline-success"> <span class="fa fa-plus-circle"></span> &nbsp; Incluir nova pagina </button>
+                        <br />
+                        <br />
 
-<h1><span class="fa fa-book"></span> Paginas Cadastradas </h1>
+                        <table id="listagem_telas" class="table table-striped table-bordered table-sm" align="center" data-page-length='5'>
+                            <thead>
+                                <tr>
+                                    <th scope="col"> ID </th>
+                                    <th scope="col"> Pagina </th>
+                                    <th scope="col"> Titulo da Aba </th>
+                                    <th scope="col"> conteudo da pagina </th>
+                                    <th scope="col"> Possui foto ? </th>
+                                    <th scope="col"> Tem Formulario ? </th>
+                                    <th scope="col"> Galeria Principal ? </th>
+                                    <th scope="col"> Alterar dados </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (ItemsPaginaGeral dadosPagina in Model.listaPaginasSistema)
+                                {
+                                    var temFoto = dadosPagina.hasFoto == true ? "Sim" : "Não";
+                                    var temForm = dadosPagina.hasForm == true ? "Sim" : "Não";
+                                    var isGaleria = dadosPagina.isMainPhoto == true ? "Sim" : "Não";
+                                    var conteudoPagina = "";
+                                    if (dadosPagina.conteudo_pagina.Length > 105)
+                                    {
+                                        conteudoPagina = dadosPagina.conteudo_pagina.Trim().Substring(0, 60) + "...";
+                                    }
+                                    else
+                                    {
+                                        conteudoPagina = dadosPagina.conteudo_pagina.Trim();
+                                    }
+                                    <tr>
+                                        <th scope="row"> @dadosPagina.id_pagina </th>
+                                        <td> @dadosPagina.nome_pagina.Trim() </td>
+                                        <td> @dadosPagina.titulo_aba.Trim() </td>
+                                        <td> @Html.Raw(conteudoPagina) </td>
+                                        <td> @temFoto </td>
+                                        <td> @temForm </td>
+                                        <td> @isGaleria </td>
+                                        <td>
+                                            <div class="form-check-inline">
+                                                @if (dadosPagina.nome_pagina != "_main")
+                                                {
+                                                    <a style="margin:20px;" href="" onclick="deletaPagina(@dadosPagina.id_pagina)" data-placement="top" title="Excluir Pagina" class="tip-top fas fa-trash fa-2x"></a>
+                                                }
+                                                @if (dadosPagina.hasFoto == true)
+                                                {
+                                                    <a href="" data-placement="top" style="margin:20px;" class="tip-top" title="Incluir Fotos" data-toggle="modal" onclick="setDataModalFotos('@dadosPagina.nome_pagina')" data-target="#modalDinamico" shref=""><img width="30" height="30" src="~/icons/icon_photo.png" /></a>
+                                                }
+                                                @if (dadosPagina.hasForm == true)
+                                                {
+                                                    <a href="" data-placement="top" style="margin:20px;" class="tip-top" data-toggle="tooltip" title="Incluir Formulário" shref=""><img width="30" height="30" src="~/icons/form_icon.png" /></a>
+                                                }
+                                                <button type="button" style="width:110px;" onclick="location.href='/Portifolio/ConfiguracaoPagina/@dadosPagina.nome_pagina'" class="tip-top btn btn-info" data-placement="top" data-toggle="tooltip" title="Alterar dados da tela"><span class="fas fa-pen"></span> &nbsp; Alterar </button>
 
-<button style="margin-left:920px; margin-top:-10px; width: 200px;" type="button" onclick="location.href='DadosTelaDinamicoManager'" class="btn btn-outline-success"> <span class="fa fa-plus-circle"></span> &nbsp; Incluir nova pagina </button><br /><br />
-
-<table id="listagem_telas" class="table table-striped table-bordered table-sm" align="center">
-    <thead>
-        <tr>
-            <th scope="col"> ID </th>
-            <th scope="col"> Pagina </th>
-            <th scope="col"> Titulo da Aba </th>
-            <th scope="col"> conteudo da pagina </th>
-            <th scope="col"> Possui foto ? </th>
-            <th scope="col"> Tem Formulario ? </th>
-            <th scope="col"> Galeria Principal ? </th>
-            <th scope="col"> Alterar dados </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (ItemsPaginaGeral dadosPagina in Model.listaPaginasSistema)
-        {
-            var temFoto = dadosPagina.hasFoto == true ? "Sim" : "Não";
-            var temForm = dadosPagina.hasForm == true ? "Sim" : "Não";
-            var isGaleria = dadosPagina.isMainPhoto == true ? "Sim" : "Não";
-            var conteudoPagina = "";
-            if (dadosPagina.conteudo_pagina.Length > 105)
-            {
-                conteudoPagina = dadosPagina.conteudo_pagina.Trim().Substring(0, 60) + "...";
-            }
-            else
-            {
-                conteudoPagina = dadosPagina.conteudo_pagina.Trim();
-            }
-            <tr>
-                <th scope="row"> @dadosPagina.id_pagina </th>
-                <td> @dadosPagina.nome_pagina.Trim() </td>
-                <td> @dadosPagina.titulo_aba.Trim() </td>
-                <td> @Html.Raw(conteudoPagina) </td>
-                <td> @temFoto </td>
-                <td> @temForm </td>
-                <td> @isGaleria </td>
-                <td>
-                    <div class="form-check-inline">
-                        @if (dadosPagina.nome_pagina != "_main")
-                        {
-                            <a style="margin:20px;" href="" onclick="deletaPagina(@dadosPagina.id_pagina)" data-placement="top" title="Excluir Pagina" class="tip-top fas fa-trash fa-2x"></a>
-                        }
-                        @if (dadosPagina.hasFoto == true)
-                        {
-                            <a href="" data-placement="top" style="margin:20px;" class="tip-top" title="Incluir Fotos" data-toggle="modal" onclick="setDataModalFotos('@dadosPagina.nome_pagina')" data-target="#modalDinamico" shref=""><img width="30" height="30" src="~/icons/icon_photo.png" /></a>
-                        }
-                        @if (dadosPagina.hasForm == true)
-                        {
-                            <a href="" data-placement="top" style="margin:20px;" class="tip-top" data-toggle="tooltip" title="Incluir Formulário" shref=""><img width="30" height="30" src="~/icons/form_icon.png" /></a>
-                        }
-                        <button type="button" style="width:110px;" onclick="location.href='/Portifolio/ConfiguracaoPagina/@dadosPagina.nome_pagina'" class="tip-top btn btn-info" data-placement="top" data-toggle="tooltip" title="Alterar dados da tela"><span class="fas fa-pen"></span> &nbsp; Alterar </button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
                     </div>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                </div>
+            </div>
+            <!-- area Paginas Cadastradas -->
+
+            <div class="card">
+                <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#collapseThree"></a>
+                    </h2>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
- <partial name="~/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml">
+
+   
+
+
+    <partial name="~/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml">
 
 
 
