Refatoração tela login e ajustes formulario

--- a/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
@@ -68,7 +68,7 @@
                 <div class="card-header" id="headingOne">
                     <h2 class="mb-0">
                         <span class="fa fa-pen-alt"></span> Modificação de Titulo Geral
-                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#tabTituloGeral"></a>
+                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"  data-toggle="collapse" data-target="#tabTituloGeral"></a>
                     </h2>
                 </div>
                 <div id="tabTituloGeral" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -97,7 +97,7 @@
                 <div class="card-header" id="headingTwo">
                     <h2 class="mb-0">
                         <span class="fa fa-book"></span> Paginas Cadastradas
-                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#tabPaginasCadastradas"></a>
+                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"   data-toggle="collapse" data-target="#tabPaginasCadastradas"></a>
                     </h2>
                 </div>
                 <div id="tabPaginasCadastradas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -174,7 +174,7 @@
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h2 class="mb-0">
-                        <a class="fa fa-arrow-circle-down fa-pull-right" data-toggle="collapse" data-target="#collapseThree"></a>
+                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right" id="button-collapse" data-toggle="collapse" data-target="#collapseThree"></a>
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
