--- a/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
+++ b/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
@@ -38,7 +38,7 @@
             <div class="justify-content-end">
                 <div class="navbar-header btn icon">
                     <p style="color:black;"> Ola seja bem vindo <b> @User.Identity.Name </b> ! </p>
-                    <a class="btn btn-dark" href="@("/Portifolio/logout")">Logout</a>
+                    <a class="btn btn-dark" href="@("/managerlogin/logout")">Logout</a>
                 </div>
             </div>
         }
