--- a/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
+++ b/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
@@ -8,62 +8,62 @@
 
 <script type="text/javascript">
 
-    $("#btnSubmit").click(function () {
-        var username = $("#username").val();
-        var senha = $("#senha").val();
-        var msgString = "";
+    //$("#btnSubmit").click(function () {
+    //    var username = $("#username").val();
+    //    var senha = $("#senha").val();
+    //    var msgString = "";
 
 
-        if (username == "") {
-            msgString += "* O campo <b>Usuario</b> nao esta preenchido ! <br/>"
-        }
+    //    if (username == "") {
+    //        msgString += "* O campo <b>Usuario</b> nao esta preenchido ! <br/>"
+    //    }
 
-        if (senha == "") {
-            msgString += "* O campo <b>Senha</b> nao esta preenchido ! <br/>"
-        }
+    //    if (senha == "") {
+    //        msgString += "* O campo <b>Senha</b> nao esta preenchido ! <br/>"
+    //    }
 
-        if (msgString.length > 0) {
-            $("#msg-alerta").removeClass("alert alert-warning alert-dismissible fade show").addClass("alert alert-danger alert-dismissible fade show");
-            $('#titulo_alerta').html("<span class=\"fas fa-exclamation-circle\"></span> &nbsp <b>Atenção</b>");
-            $('#texto-alerta').html(msgString);
-            $('#msg-alerta').fadeIn(100);
-            return false;
-        }
-        else {
+    //    if (msgString.length > 0) {
+    //        $("#msg-alerta").removeClass("alert alert-warning alert-dismissible fade show").addClass("alert alert-danger alert-dismissible fade show");
+    //        $('#titulo_alerta').html("<span class=\"fas fa-exclamation-circle\"></span> &nbsp <b>Atenção</b>");
+    //        $('#texto-alerta').html(msgString);
+    //        $('#msg-alerta').fadeIn(100);
+    //        return false;
+    //    }
+    //    else {
 
-            var objValidacao = {
-                 usuario: username,
-                 senha:senha
-             }
+    //        var objValidacao = {
+    //             usuario: username,
+    //             senha:senha
+    //         }
 
-            var stringJson = JSON.stringify(objValidacao);
-            var parsed = JSON.parse(stringJson);
+    //        var stringJson = JSON.stringify(objValidacao);
+    //        var parsed = JSON.parse(stringJson);
 
 
-            $.ajax({
-                url: 'validaUser',
-                type: "POST",
-                data: {
-                    dadosUser:parsed
-                },
-                success: function (retorno) {
-                    if (retorno[1] == "ok") {
-                       window.location.href = "/Portifolio/manager_principal";
-                    } else {
-                        $("#msg-alerta").removeClass("alert alert-warning alert-dismissible fade show").addClass("alert alert-danger alert-dismissible fade show");
-                        $('#titulo_alerta').html("<span class=\"fas fa-exclamation-circle\"></span> &nbsp <b>Atenção</b>");
-                        $('#texto-alerta').html(retorno[0]);
-                        $('#msg-alerta').fadeIn(100);
-                    }
+    //        $.ajax({
+    //            url: 'validaUser',
+    //            type: "POST",
+    //            data: {
+    //                dadosUser:parsed
+    //            },
+    //            success: function (retorno) {
+    //                if (retorno[1] == "ok") {
+    //                   window.location.href = "/Portifolio/manager_principal";
+    //                } else {
+    //                    $("#msg-alerta").removeClass("alert alert-warning alert-dismissible fade show").addClass("alert alert-danger alert-dismissible fade show");
+    //                    $('#titulo_alerta').html("<span class=\"fas fa-exclamation-circle\"></span> &nbsp <b>Atenção</b>");
+    //                    $('#texto-alerta').html(retorno[0]);
+    //                    $('#msg-alerta').fadeIn(100);
+    //                }
                
-                }
-            });
+    //            }
+    //        });
 
 
-        }
+    //    }
 
 
-    });
+    //});
 
 
 
